ocaml-http (0.1.4-1) UNRELEASED; urgency=low

  * send internally generated headers as lowercase strings, for consistency
    with headers generated via setXXX methods

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 24 Jan 2007 10:09:12 +0100

ocaml-http (0.1.3-3) UNRELEASED; urgency=low

  * debian/rules
    - use ocaml.mk
  * debian/control
    - bumped build-dep on ocaml-nox to >= 3.09.2-7, since we now use
      ocaml.mk
    - bumped build-dep on debhelper to >> 5
    - rebuilt against ocamlnet 2.2, bumped deps accordingly
  * debian/compat
    - bumped compatibility level to 5

 -- Stefano Zacchiroli <zack@debian.org>  Wed,  3 Jan 2007 20:14:08 +0100

ocaml-http (0.1.3-2) unstable; urgency=low

  * debian/control.in
    - file removed, no longer needed
  * debian/control
    - bumped dependencies on pcre-ocaml and ocamlnet
  * debian/rules
    - binNMU safe substitution of variables in .in files
  * debian/dirs
    - file removed, will be generated at build time

 -- Stefano Zacchiroli <zack@debian.org>  Fri, 15 Sep 2006 00:29:56 +0200

ocaml-http (0.1.3-1) unstable; urgency=low

  * force bash as SHELL in Makefile, since we rely on bashisms
    (closes: bug#381915)
  * removed Http_daemon.{start,start'}, they have been deprecated a while ago
    in favour of Http_daemon.main
  * added 'auto_close' to daemon specifications. When set to true (defaults to
    false), makes ocaml-http close every connection with client just after
    having executed a callback, no matter if that callback succeeds or fails
    with an exception

 -- Stefano Zacchiroli <zack@debian.org>  Sun, 20 Aug 2006 18:07:41 +0200

ocaml-http (0.1.2-4) unstable; urgency=low

  * Rebuilt against ocaml 3.09.2, bumped deps accordingly.
  * debian/control
    - Bumped Standards-Version to 3.7.2 (no changes needed)

 -- Stefano Zacchiroli <zack@debian.org>  Wed, 17 May 2006 05:18:32 +0000

ocaml-http (0.1.2-3) unstable; urgency=low

  * Rebuilt against OCaml 3.09.1, bumped deps accordingly.
